# fast_api_template

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
app/: constants.py  events.py  main.py  models.py  router.py  service.py
app/auth/: models.py
app/config/: abstract_settings.py  config.py  config_factory.py  constants.py  core_settings.py  dev_settings.py  prod_settings.py  router.py  service.py  stage_settings.py  utils.py
app/db/: core_table.py  database.py  dependencies.py  events.py  init_db.py  models.py  schemas.py  service.py  utils.py
app/generic/: router.py
app/logging/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  sensitive_filter.py  service.py  utils.py
scripts/: lint.sh  test.sh
tests/: test_main.py
tests/rest_calls/: config.rest
tests/test_config/: test_config.py
tests/test_logging/: test_logging.py
